Hot Commands for Visual Studio
10-Jan-2022: v4.0.0 Upgraded to VS2022. Now only targeting VS2022+.
04-May-2020: v3.0.0 Now only targeting VS2017+. Handles Async loading (Issue #81/PR #82)
03-May-2020: v2.1.7 Updated build files so it builds in VS2015, VS2017 and VS2019
14-Oct-2018: v2.1.6 Merged fix to ExpandSelection message on C++ (Issue #58)
03-Oct-2018: v2.1.5 Reset ExpandSelection default shortcut to Ctrl+W
05-Jun-2018: v2.1.4 Added keyboard shortcuts import file.
17-May-2018: v2.1.3 Improved page scroll for MoveMember Up/Down and GoToNext/Prev Member
05-Apr-2018: v2.1.1 Packaged for release to VS2015 and VS2017
13-Mar-2018: v2.1.0 Added feature: GoToLastEditLocation
24-Dec-2017: v2.0.0 HotRefactorings removed and now available as a separate extension.
14-Oct-2017: v1.1.7 Fixed issue #69 - InitializeFieldFromConstructor bug
14-May-2017: v1.1.6 Change class modifier now works with interfaces
19-Jan-2017: v1.1.5 No longer force-binding Ctrl+W shortcut
19-Dec-2016: v1.1.4 Fixed Copy-Buffer issue with Duplicate Line
18-Dec-2016: v1.1.3 Added command: Join Lines
14-Nov-2016: v1.1.2 Updated icons and licence.