@@ -1,4 +1,5 @@
 Hot Commands for Visual Studio
+07-Aug-2022: v4.1.0 Added command: DuplicateLine (Issue #89 - Fabio Marmitt)
 10-Jan-2022: v4.0.0 Upgraded to VS2022. Now only targeting VS2022+.
 04-May-2020: v3.0.0 Now only targeting VS2017+. Handles Async loading (Issue #81/PR #82)
 03-May-2020: v2.1.7 Updated build files so it builds in VS2015, VS2017 and VS2019
